--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1244,7 +1244,6 @@
 
     <script>
 
-
         const employmentSummary = {
             borrowerName: "",
             gaps: [],
@@ -1315,10 +1314,8 @@ income.`;
         const summarySectionGaps = document.getElementById("summary-section-gap");
         const incomeAnalysisSection = document.getElementById("income-analysis-section");
 
-        let s = new Set();
-        let e = new Set();
+        // let e = new Set();
         let duration = 0;
-        let gap = 0;
         let totalMonths = 0;
         let totalGap = 0;
 
@@ -1331,36 +1328,184 @@ income.`;
             incomeType
         } = employmentSummary;
 
-        function calculateMonths(start, end, { withGap = false } = {}) {
+
+        const calculateTotalMonths = (start, end) => {
             let startDate = moment(start);
             let endDate = moment(end);
-            let gapInfo = {};
 
-            s.add(start);
-            e.add(end);
+            return Math.round(endDate.diff(startDate, "months", true));
+        }
 
-            duration = Math.round(endDate.diff(startDate, "months", true));
+        let s = new Set();
+        const calculateGaps = (start, end, isCurrentJob) => {
+            let startDate = moment(start);
+            let endDate = moment(end);
+            let gapInfo = null;
+            let gap = 0;
+            let isInvalid = false;
 
-            if (withGap) {
-                let startDate = [...s];
-                let endDate = [...e];
-                gap = Math.abs(Math.round(moment(endDate[endDate.length - 2]).diff(moment(startDate[startDate.length - 1]), "months")));
+            s.add(JSON.stringify({ startDate, endDate, isCurrentJob }));
+
+            let dates = [...s].map(e => JSON.parse(e)).sort((a, b) => moment(a.startDate).diff(b.startDate));
+            console.log("LENGTH", dates.length);
+            for (let i = 0; i < dates.length - 1; i++) {
+                console.log("loop index", i);
+
+                console.log((dates[i].endDate > dates[i + 1].startDate) && dates[i].isCurrentJob);
+                if ((dates[i].endDate > dates[i + 1].startDate) && dates[i].isCurrentJob) {
+                    console.log("INVALID");
+                    isInvalid = true;
+                }
+
+                if (dates[i].endDate > dates[i + 1].startDate && !dates[i].isCurrentJob) {
+                    isInvalid = false;
+                    console.log("LESSER 2", moment(dates[i + 1].startDate).diff(moment(dates[i].endDate), "months"));
+                    gap = Math.abs(Math.round(moment(dates[i + 1].startDate).diff(moment(dates[i].endDate), "months")));
+                }
+
+                if (dates[i].endDate < dates[i + 1].startDate) {
+                    isInvalid = false;
+                    console.log("LESSER 1", moment(dates[i].endDate).diff(moment(dates[i + 1].startDate), "months"));
+                    gap = Math.abs(Math.round(moment(dates[i].endDate).diff(moment(dates[i + 1].startDate), "months")));
+                }
 
 
-                if (gap > 0) {
-                    const a = startDate[startDate.length - 1];
-                    const b = endDate[endDate.length - 2];
-                    const startOfTheMonth = moment(b).add(1, 'day').format("l");
-                    const endOfTheMonth = moment(a).subtract(1, 'day').format("l");
-                    gapInfo = {
-                        gap,
-                        startOfTheMonth,
-                        endOfTheMonth,
+                console.log("Sorted", dates);
+
+                if (!isInvalid) {
+                    if (gap > 0) {
+                        let a;
+                        let b;
+                        console.log("ISINVALID ?? ", isInvalid);
+                        if (dates[i].endDate < dates[i + 1].startDate) {
+                            console.log("LESSER GAP 1");
+                            a = dates[i + 1].startDate;
+                            b = dates[i].endDate;
+                        } else {
+                            console.log("LESSER GAP 2");
+                            a = dates[i].startDate;
+                            b = dates[i + 1].endDate;
+                        }
+
+                        console.log("GAP START", a);
+                        console.log("GAP END", b);
+                        console.log("MOMENT", gap);
+
+                        const startOfTheMonth = moment(b).add(1, 'day').format("l");
+                        const endOfTheMonth = moment(a).subtract(1, 'day').format("l");
+
+                        console.log("GAP START OF MONTH", startOfTheMonth);
+                        console.log("GAP END OF MONTH", endOfTheMonth);
+                        gapInfo = {
+                            gap,
+                            startOfTheMonth,
+                            endOfTheMonth
+                        }
                     }
                 }
             }
-            return { duration, gapInfo };
+            return gapInfo;
         }
+
+        // function calculateMonths(start, end, { withGap = false, isCurrentJob = false } = {}) {
+        //     let startDate = moment(start);
+        //     let endDate = moment(end);
+        //     let gapInfo = {};
+        //     let gap = 0;
+
+        //     s.add(JSON.stringify({ startDate, endDate, isCurrentJob }));
+
+        //     // console.log("Unsorted", [...s]);
+        //     // console.log("Sorted", [...s].map(e => JSON.parse(e)).sort((a, b) => moment(a.startDate).diff(b.startDate)));
+
+        //     duration = Math.round(endDate.diff(startDate, "months", true));
+
+        //     if (withGap) {
+
+        //         let dates = [...s].map(e => JSON.parse(e)).sort((a, b) => moment(a.startDate).diff(b.startDate));
+        //         console.log("LENGTH", dates.length);
+        //         for (let i = 0; i < dates.length - 1; i++) {
+        //             console.log("loop index", i);
+
+        //             console.log((dates[i].endDate > dates[i + 1].startDate) && dates[i].isCurrentJob);
+        //             if ((dates[i].endDate > dates[i + 1].startDate) && dates[i].isCurrentJob) {
+        //                 console.log("INVALID");
+        //                 return;
+        //             }
+
+        //             if (dates[i].endDate < dates[i + 1].startDate) {
+        //                 console.log("LESSER 1", moment(dates[i].endDate).diff(moment(dates[i + 1].startDate), "months"));
+        //                 gap = Math.abs(Math.round(moment(dates[i].endDate).diff(moment(dates[i + 1].startDate), "months")));
+        //             } else {
+        //                 console.log("LESSER 2", moment(dates[i + 1].startDate).diff(moment(dates[i].endDate), "months"));
+        //                 gap = Math.abs(Math.round(moment(dates[i + 1].startDate).diff(moment(dates[i].endDate), "months")));
+        //             }
+        //             console.log("Sorted", dates);
+
+        //             if (gap > 0) {
+        //                 let a;
+        //                 let b;
+
+        //                 if (dates[i].endDate < dates[i + 1].startDate) {
+        //                     console.log("LESSER GAP 1");
+        //                     a = dates[i + 1].startDate;
+        //                     b = dates[i].endDate;
+        //                 } else {
+        //                     console.log("LESSER GAP 2");
+        //                     a = dates[i].startDate;
+        //                     b = dates[i + 1].endDate;
+        //                 }
+
+        //                 console.log("GAP START", a);
+        //                 console.log("GAP END", b);
+        //                 console.log("MOMENT", gap);
+
+        //                 const startOfTheMonth = moment(b).add(1, 'day').format("l");
+        //                 const endOfTheMonth = moment(a).subtract(1, 'day').format("l");
+
+        //                 console.log("GAP START OF MONTH", startOfTheMonth);
+        //                 console.log("GAP END OF MONTH", endOfTheMonth);
+        //                 gapInfo = {
+        //                     gap,
+        //                     startOfTheMonth,
+        //                     endOfTheMonth,
+        //                 }
+        //             }
+
+        //         }
+
+
+
+
+        //         // for (let i = (dates.length - 1 && dates.length > 1); i >= 0; i--) {
+        //         //     // let endDate = [...e].map(e => JSON.parse(e));
+        //         //     console.log("loop index", i);
+        //         //     gap = Math.abs(Math.round(moment(dates[i].endDate).diff(moment(dates[i - 1].startDate), "months")));
+        //         //     console.log("Sorted", dates);
+        //         //     console.log("INDEX FOR START", i - 1);
+        //         //     console.log("INDEX FOR END", i);
+
+        //         //     console.log("GAP START", dates[i - 1].startDate);
+        //         //     console.log("GAP END", dates[i].endDate);
+        //         //     console.log("MOMENT", moment(dates[i].endDate).diff(moment(dates[i - 1].startDate), "months"));
+
+        //         //     console.log(gap);
+        //         //     if (gap > 0) {
+        //         //         const a = dates[i - 1].startDate;
+        //         //         const b = dates[i].endDate;
+        //         //         const startOfTheMonth = moment(b).add(1, 'day').format("l");
+        //         //         const endOfTheMonth = moment(a).subtract(1, 'day').format("l");
+        //         //         gapInfo = {
+        //         //             gap,
+        //         //             startOfTheMonth,
+        //         //             endOfTheMonth,
+        //         //         }
+        //         //     }
+
+        //         // }
+        //     }
+        //     return { duration, gapInfo };
+        // }
 
 
 
@@ -1432,12 +1577,14 @@ income.`;
                     }
 
 
+
                     if (child === 2) {
                         const name = document.querySelector(".additionalBorrowerName")
                         const employmentBlocks = document.querySelectorAll(".additionalEmploymentBlock");
                         borrowerName = name.value.toString();
 
                         employmentBlocks.forEach((block, index) => {
+                            console.log("CALLED");
                             const employerName = block.querySelector(".additionalEmployerName");
                             const position = block.querySelector(".additionalPosition");
                             const startDateInput = block.querySelector('.additionalStartDate').value;
@@ -1446,21 +1593,63 @@ income.`;
 
                             const startDate = new Date(startDateInput);
                             const endDate = isCurrentJob ? new Date() : new Date(endDateInput);
-                            const { duration } = calculateMonths(startDate, endDate);
+
+                            const duration = calculateTotalMonths(startDate, endDate);
                             totalMonths += duration;
                             durations.push({ totalMonths, startDate, endDate, isCurrentJob });
+                            // if (index > 0) {
+                            const gapInfo = calculateGaps(startDate, endDate, isCurrentJob);
 
-                            if (index > 0) {
-                                const { gapInfo } = calculateMonths(startDate, endDate, { withGap: true });
+                            if (gapInfo !== null) {
                                 const { gap, startOfTheMonth, endOfTheMonth } = gapInfo;
                                 totalGap += gap;
-                                gaps.push({ totalGap, startOfTheMonth, endOfTheMonth });
-                            }
+                                gaps.push({ gap, startOfTheMonth, endOfTheMonth });
+                                gaps = gaps.filter(e => e.startOfTheMonth !== undefined && e.endOfTheMonth !== undefined);
+                                console.log("MAIN GAPS", gaps.length, "GAP VALUE", gap, "TOTAL GAP VALUE", totalGap);
 
+                            }
+                            // }
                             employers.push(employerName.value.toString());
                             positions.push(position.value.toString());
                         });
                     }
+
+                    // if (child === 2) {
+                    //     const name = document.querySelector(".additionalBorrowerName")
+                    //     const employmentBlocks = document.querySelectorAll(".additionalEmploymentBlock");
+                    //     borrowerName = name.value.toString();
+
+                    //     employmentBlocks.forEach((block, index) => {
+                    //         console.log("CALLED");
+                    //         const employerName = block.querySelector(".additionalEmployerName");
+                    //         const position = block.querySelector(".additionalPosition");
+                    //         const startDateInput = block.querySelector('.additionalStartDate').value;
+                    //         const endDateInput = block.querySelector('.additionalEndDate').value;
+                    //         const isCurrentJob = block.querySelector('.CurrenPositionCheck').checked;
+
+                    //         const startDate = new Date(startDateInput);
+                    //         const endDate = isCurrentJob ? new Date() : new Date(endDateInput);
+
+                    //         const { duration, gapInfo } = calculateMonths(startDate, endDate, { withGap: true, isCurrentJob: isCurrentJob });
+                    //         totalMonths += duration;
+                    //         durations.push({ totalMonths, startDate, endDate, isCurrentJob });
+
+                    //         // if (index > 0) {
+                    //         //     const { gapInfo } = calculateMonths(startDate, endDate, { withGap: true, isCurrentJob: isCurrentJob });
+                    //         const { gap, startOfTheMonth, endOfTheMonth } = gapInfo;
+                    //         totalGap += gap;
+
+                    //         // if (totalGap > 0) {
+                    //         gaps.push({ gap, startOfTheMonth, endOfTheMonth });
+                    //         // }
+                    //         console.log("MAIN GAPS", gaps.length, "GAP VALUE", gap, "TOTAL GAP VALUE", totalGap);
+                    //         // }
+
+                    //         gaps = gaps.filter(e => e.startOfTheMonth !== undefined && e.endOfTheMonth !== undefined);
+                    //         employers.push(employerName.value.toString());
+                    //         positions.push(position.value.toString());
+                    //     });
+                    // }
 
                     if (child === 4) {
                         summarySectionIntro.innerText = `${borrowerName}`;
@@ -1507,7 +1696,7 @@ income.`;
                         summarySectionDuration.innerText = `Total Month(s): ${durations[durations.length - 1].totalMonths
                             }`;
 
-                        summarySectionGaps.innerText = `Total Gap: ${gaps.length > 0 ? gaps[gaps.length - 1].totalGap : 0} month(s).`;
+                        summarySectionGaps.innerText = `Total Gap: ${gaps.length > 0 ? gaps[gaps.length - 1].gap : 0} month(s).`;
                     }
                 } else if (id == "prev") {
                     clearAllData();
@@ -1542,6 +1731,8 @@ income.`;
             positions = [];
             gaps = [];
             durations = [];
+            s.clear();
+            e.clear();
 
             summarySectionIntro.innerText = "";
             summarySectionDuration.innerText = "";
